--- a/mainLayout.css
+++ b/mainLayout.css
@@ -60,7 +60,7 @@ img {
 
 #gameTitle {
 	font-weight: bold;
-	color: red;
+	color: blue;
 }
 
 #gameBoard {
@@ -102,7 +102,7 @@ img {
 	position: absolute;
 	top: -500px;
 	left: calc(50% - 160px);
-	background-color: white;
+	background-color: black;
 	width: 320px;
 	height: 500px;
 }
