--- a/mainLayout.css
+++ b/mainLayout.css
@@ -102,7 +102,7 @@ img {
 	position: absolute;
 	top: -500px;
 	left: calc(50% - 160px);
-	background-color: black;
+	background-color: #ff5400;
 	width: 320px;
 	height: 500px;
 }
